--- a/templates/index.html
+++ b/templates/index.html
@@ -1,11 +1,8 @@
 [[extend 'outc_layout.html']]
 
-<div class="section">
-  <div class="vars">
-    [[=form]]
-  </div>
-  <div class="vars">
+<div class='section'>
+  <h1>Before alert</h1>
+  <flash-alerts class="padded" data-alert="[[=globals().get('flash','')]]"></flash-alerts>
 
 
-  </div>
 </div>
