--- a/templates/outc_layout.html
+++ b/templates/outc_layout.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <base href="[[=URL('static')]]/">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <base href="[[=URL('static')]]/">
 
     <title>OUTC batch input
     </title>
@@ -15,13 +15,14 @@
 
   </head>
 
-  <body>
+  <body class="has-navbar-fixed-top">
+    [[ =make_navbar(menu_structure) ]]
+
 
     <h1 class="title is-3 box">OUTC Batch Input</h1>
 
 
     <main class="padded">
-      <flash-alerts class="padded" data-alert="[[=globals().get('flash','')]]"></flash-alerts>
 
       <!-- content injected by extending page -->
       [[include]]
@@ -33,4 +34,32 @@
   </body>
   <!-- You've gotta have utils.js -->
   <script src="js/utils.js"></script>
-  </html>
+  <!-- needed for hamburger menu -->
+  <script>
+    document.addEventListener('DOMContentLoaded', () => {
+
+      // Get all "navbar-burger" elements                                                              
+      const $navbarBurgers = Array.prototype.slice.call(document.querySelectorAll('.navbar-burger'), 0);
+
+      // Check if there are any navbar burgers
+      if ($navbarBurgers.length > 0) {
+
+	// Add a click event on each of them
+	$navbarBurgers.forEach( el => {
+	  el.addEventListener('click', () => {
+
+	    // Get the target from the "data-target" attribute
+	    const target = el.dataset.target;
+	    const $target = document.getElementById(target);
+
+	    // Toggle the "is-active" class on both the "navbar-burger" and the "navbar-menu"
+	    el.classList.toggle('is-active');
+	    $target.classList.toggle('is-active');
+
+	  });
+	});
+      }  
+
+    });
+  </script>
+    </html>
