Fixed description display Also fixing git conflicts

--- a/templates/form.html
+++ b/templates/form.html
@@ -85,7 +85,13 @@
 	    </td>
 	  -->
 	  <td>
-	    [[ = ", ".join([row.account.description, row.extra_description]) ]]
+	    [[
+	    if row.extra_description:
+		    = ", ".join([row.account.description, row.extra_description])
+	    else:
+		    = row.account.description
+	    pass
+	    ]]
 	  </td>
 	  <td>
 	    [[ =row.quantity ]]
