Fixed description display

--- a/templates/form.html
+++ b/templates/form.html
@@ -85,7 +85,7 @@
 	    </td>
 	  -->
 	  <td>
-	    [[ #= ", ".join([row.account.description, row.extra_description]) ]]
+	    [[ = ", ".join([row.account.description, row.extra_description]) ]]
 	  </td>
 	  <td>
 	    [[ =row.quantity ]]
