--- a/templates/outc_layout.html
+++ b/templates/outc_layout.html
@@ -62,4 +62,9 @@
 
     });
   </script>
-    </html>
+  <script>
+    function confirmLinkClick() {
+      return confirm("Are you sure you want to clear all these records?");
+    }
+  </script>
+</html>
