--- a/templates/outc_layout.html
+++ b/templates/outc_layout.html
@@ -7,11 +7,19 @@
 
     <title>OUTC batch input
     </title>
+    
+    <!-- jQuery (required for Select2) -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
+
 
     <link rel="stylesheet" href="css/bulma.min.css">
+    <link rel="stylesheet" href="css/outc.css">
+
     <script src="https://kit.fontawesome.com/1dec05b94f.js" crossorigin="anonymous"></script>
 
-
+    <!-- Select2 CSS and JS -->
+    <link href="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/css/select2.min.css" rel="stylesheet" />
+    <script src="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/js/select2.min.js"></script>
 
   </head>
 
@@ -66,5 +74,42 @@
     function confirmLinkClick() {
       return confirm("Are you sure you want to clear all these records?");
     }
-  </script>
+      </script
+
+      <!- Needed to execute select2 on filterable fields -->
+      <script>
+	$(document).ready(function() {
+	  // Initialize Select2 on all select elements with class 'filterable'
+	  $('select.filterable').select2({
+	    width: '50%',               // Makes the dropdown take full width
+	    placeholder: 'Select an option...',  // Placeholder text
+	    allowClear: true,            // Adds an "x" to clear the selection
+	    matcher: matchCustom         // Optional: custom matcher function for better matching
+	  });
+
+	  // Optional: custom matcher function for more flexible matching
+	  function matchCustom(params, data) {
+	    // If there are no search terms, return all of the data
+	    if ($.trim(params.term) === '') {
+	      return data;
+	    }
+
+	    // Skip if there is no 'text' property
+	    if (typeof data.text === 'undefined') {
+	      return null;
+	    }
+
+	    // `params.term` should be the term that is used for searching
+	    // `data.text` is the text that is displayed for the data object
+	    if (data.text.toLowerCase().indexOf(params.term.toLowerCase()) > -1) {
+	      // You can return modified data. Select2 will use this as the item in the list
+	      return data;
+	    }
+
+	    // Return `null` if the term should not be displayed
+	    return null;
+	  }
+	});
+      </script>
+
 </html>
